<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.localdelivery.driver.views.LoginActivity">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputEmail"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mail"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/edit_email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputPassword"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_icon_password"
                android:drawableStart="@drawable/ic_icon_password"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in"
            android:onClick="loginBtn"
            android:background="@drawable/round_shape"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/txtforgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:onClick="forgotPassword"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                style="?android:attr/borderlessButtonStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_here_sign_up"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:onClick="registerBtn"
                android:textSize="13sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="?android:attr/borderlessButtonStyle"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_in_using"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@android:color/black"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/img_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icon_facebook"
            android:layout_gravity="center"
            android:contentDescription="@string/facebook"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>