<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/driverimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:civ_border_color="@color/colorPrimary"
        android:layout_gravity="center"
        app:civ_border_width="5dp"
        android:layout_marginTop="20dp"
        app:civ_shadow="true"
        android:src="@drawable/ic_icon_driver_pic"
        app:civ_shadow_radius="10"
        app:civ_shadow_color="#8BC34A"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInputFirstName"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp">

                    <EditText
                        android:id="@+id/edit_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInputLastName"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edit_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputEmail"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mail"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputPassword"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputMobile"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <EditText
                    android:id="@+id/editMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputVehicleType"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <EditText
                    android:id="@+id/edit_vehicleType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vehicle_type"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:background="@drawable/round_shape"
                android:textColor="@android:color/white"
                android:onClick="registerBtn"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
